colour and other ui changes

--- a/src/components/body/body.module.css
+++ b/src/components/body/body.module.css
@@ -1,5 +1,5 @@
 .body {
-    background-color: #15D0B3;
+    background-color: #f2e8fa;
     display: flex;
     justify-content: center;
     align-items: center;
